--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Medical Assistant</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: '#0f9d92',
+              'primary-dark': '#0b786e',
+              accent: '#ff6b6b',
+              gold: '#f4b400',
+              bgSoft: '#f7fbfb',
+              text: '#061223',
+              'text-muted': '#7b8794',
+            },
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+              display: ['Poppins', 'sans-serif'],
+            },
+            borderRadius: {
+              '2xl': '1rem',
+            },
+            boxShadow: {
+              'lg': '0 12px 30px rgba(6, 20, 30, 0.06)',
+              'xl': '0 20px 40px rgba(6, 20, 30, 0.08)',
+              'inner': 'inset 0 2px 4px 0 rgba(0,0,0,0.05)',
+            },
+            backdropBlur: {
+              'md': '12px',
+            }
+          }
+        }
+      }
+    </script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        --noise-bg: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        --gradient-light: linear-gradient(180deg, rgba(15,157,146,0.06) 0%, rgba(247,251,251,1) 45%), radial-gradient(60% 40% at 10% 10%, rgba(15,157,146,0.06), transparent 30%);
+        background-color: #f7fbfb;
+        background-image: var(--noise-bg), var(--gradient-light);
+        background-blend-mode: overlay;
+        background-repeat: repeat, no-repeat;
+        font-family: 'Inter', sans-serif;
+        color: #061223;
+      }
+      h1, h2, h3, h4, h5, h6 {
+        font-family: 'Poppins', sans-serif;
+      }
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: rgba(226, 232, 240, 0.5);
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #bdc5d1;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #a0aec0;
+      }
+      :focus-visible {
+        outline: 2px solid #ff6b6b;
+        outline-offset: 2px;
+        border-radius: 4px;
+      }
+      .glass-card {
+        @apply bg-white/80 backdrop-blur-md border border-white/30 rounded-2xl shadow-lg;
+      }
+      .btn-primary {
+         @apply px-7 py-3 rounded-2xl font-bold text-white shadow-lg bg-gradient-to-r from-primary to-primary-dark transition-all transform duration-300 ease-out;
+      }
+      .btn-primary:hover {
+        @apply scale-103 shadow-xl;
+      }
+      .btn-primary:active {
+        @apply scale-95;
+      }
+      .btn-secondary {
+         @apply px-7 py-3 rounded-2xl font-bold border-2 border-primary text-primary hover:bg-primary/10 transition-colors duration-300;
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
@@ -14,7 +100,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5"
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.3.19"
   }
 }
 </script>
