--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
+        darkMode: 'class', // Enable dark mode
         theme: {
           extend: {
             colors: {
@@ -18,9 +19,18 @@
               'primary-dark': '#0b786e',
               accent: '#ff6b6b',
               gold: '#f4b400',
-              bgSoft: '#f7fbfb',
-              text: '#061223',
-              'text-muted': '#7b8794',
+              
+              // Light Theme
+              'bg-light': '#f8fafc',
+              'card-light': 'rgba(255, 255, 255, 0.8)',
+              'text-light': '#0f172a',
+              'text-muted-light': '#64748b',
+
+              // Dark Theme
+              'bg-dark': '#0f172a',
+              'card-dark': 'rgba(30, 41, 59, 0.7)',
+              'text-dark': '#e2e8f0',
+              'text-muted-dark': '#94a3b8',
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
@@ -30,12 +40,12 @@
               '2xl': '1rem',
             },
             boxShadow: {
-              'lg': '0 12px 30px rgba(6, 20, 30, 0.06)',
-              'xl': '0 20px 40px rgba(6, 20, 30, 0.08)',
+              'lg': '0 6px 24px rgba(6, 20, 30, 0.08)',
+              'xl': '0 20px 40px rgba(6, 20, 30, 0.12)',
               'inner': 'inset 0 2px 4px 0 rgba(0,0,0,0.05)',
             },
             backdropBlur: {
-              'md': '12px',
+              'md': '8px',
             }
           }
         }
@@ -46,14 +56,39 @@
         scroll-behavior: smooth;
       }
       body {
-        --noise-bg: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-        --gradient-light: linear-gradient(180deg, rgba(15,157,146,0.06) 0%, rgba(247,251,251,1) 45%), radial-gradient(60% 40% at 10% 10%, rgba(15,157,146,0.06), transparent 30%);
-        background-color: #f7fbfb;
-        background-image: var(--noise-bg), var(--gradient-light);
-        background-blend-mode: overlay;
-        background-repeat: repeat, no-repeat;
+        --bg: #f8fafc;
+        --text: #0f172a;
+        --text-muted: #64748b;
+        --card-bg: rgba(255, 255, 255, 0.8);
+        --border-color: rgba(226, 232, 240, 0.7);
+
+        background-color: var(--bg);
+        color: var(--text);
         font-family: 'Inter', sans-serif;
-        color: #061223;
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+      html.dark body {
+        --bg: #0f172a;
+        --text: #e2e8f0;
+        --text-muted: #94a3b8;
+        --card-bg: rgba(30, 41, 59, 0.7);
+        --border-color: rgba(51, 65, 85, 0.7);
+      }
+       body::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image:
+          radial-gradient(circle at 15% 15%, hsla(175, 78%, 35%, 0.1), transparent 30%),
+          radial-gradient(circle at 85% 75%, hsla(0, 96%, 69%, 0.08), transparent 40%);
+        z-index: -1;
+        transition: opacity 0.5s ease;
+      }
+      html.dark body::before {
+        opacity: 0.5;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: 'Poppins', sans-serif;
@@ -63,14 +98,14 @@
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: rgba(226, 232, 240, 0.5);
+        background: transparent;
       }
       ::-webkit-scrollbar-thumb {
         background: #bdc5d1;
         border-radius: 4px;
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #a0aec0;
+      html.dark ::-webkit-scrollbar-thumb {
+        background: #4a5568;
       }
       :focus-visible {
         outline: 2px solid #ff6b6b;
@@ -78,15 +113,18 @@
         border-radius: 4px;
       }
       .glass-card {
-        @apply bg-white/80 backdrop-blur-md border border-white/30 rounded-2xl shadow-lg;
+        background-color: var(--card-bg);
+        @apply backdrop-blur-md border rounded-2xl;
+        border-color: var(--border-color);
+        transition: background-color 0.3s, border-color 0.3s;
       }
       .btn-primary {
-         @apply px-7 py-3 rounded-2xl font-bold text-white shadow-lg bg-gradient-to-r from-primary to-primary-dark transition-all transform duration-300 ease-out;
+         @apply px-7 py-3 rounded-2xl font-bold text-white shadow-lg bg-primary transition-all transform duration-300 ease-out;
       }
-      .btn-primary:hover {
-        @apply scale-103 shadow-xl;
+      .btn-primary:hover:not(:disabled) {
+        @apply scale-103 shadow-xl bg-primary-dark;
       }
-      .btn-primary:active {
+      .btn-primary:active:not(:disabled) {
         @apply scale-95;
       }
       .btn-secondary {
@@ -101,7 +139,9 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.3.19"
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.3.19",
+    "three": "https://aistudiocdn.com/three@^0.181.0",
+    "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.0"
   }
 }
 </script>
